# academy-admin

./: .env.development  .env.docker.example  .env.example  .env.local.example  .env.production  .gitignore  .pylintrc  01 - File-system.txt  02 - admin-feature 1 .txt  03 - admin-feature-2.txt  04 - admin-feature-3.txt  05 - admin-feature-4.txt  06 - admin-feature-5.txt  07 - admin-feature 6.txt  08 - admin-feature 7.txt  09 - admin-feature 8.txt  10 - admin-feature 9.txt  API.md  CLAUDE.md  CLAUDE_BACKUP.md  DEPLOYMENT.md  MOBILE_APP_PROGRESSION_FEATURES.md  PROJECT_STRUCTURE.md  QUALITY_ASSURANCE_REPORT.md  README.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.mobile.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  git-subtree-workflow.md  index.js  package-lock.json  package.json  setup-local-db.sh  start-dev-auto.sh  start-dev.sh  (+1 more)
backend/: .dockerignore  .env.example  .env.production  .gitignore  AUTH_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  README.md  STUDENT_API_DOCS.md  alembic.ini  create_academy_programs.py  create_programs_sql.py  create_simple_test_data.py  create_test_data.py  mypy.ini  populate_program_defaults.py  populate_program_defaults_simple.py  pyproject.toml  pytest.ini  requirements.txt  setup_db.py  setup_users_and_programs.py  test_requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  20250115_add_lesson_assessment_fields.py  20250127_rename_age_ranges_to_age_groups.py  20250726_add_first_last_name_to_users.py  20250726_merge_name_fields.py
backend/app/: main.py  models.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: health.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/features/: README.md  __init__.py
backend/app/features/authentication/: __init__.py
backend/app/features/authentication/models/: __init__.py  user.py  user_program_assignment.py  user_relationship.py
backend/app/features/authentication/routes/: __init__.py  auth.py  parents.py  users.py
backend/app/features/authentication/schemas/: __init__.py  auth.py  user_enhanced.py
backend/app/features/authentication/services/: __init__.py  auth_service.py  user_service.py
backend/app/features/authentication/utils/: __init__.py  password.py
backend/app/features/common/: __init__.py
backend/app/features/common/dependencies/: program_context.py
backend/app/features/common/models/: __init__.py  base.py  database.py  enums.py
backend/app/features/common/services/: base_service.py
backend/app/features/content/models/: __init__.py  lesson.py
backend/app/features/content/routes/: __init__.py  assessments.py  content_versions.py  lessons.py
backend/app/features/content/schemas/: assessment.py  content_version.py  lesson.py
backend/app/features/content/services/: assessment_service.py  base_service.py  content_version_service.py  lesson_service.py
backend/app/features/courses/: __init__.py
backend/app/features/courses/models/: __init__.py  assessment.py  content_version.py  course.py  curriculum.py  lesson.py  level.py  media.py  program.py  section.py
backend/app/features/courses/routes/: __init__.py  advanced.py  assessments.py  content_versions.py  courses.py  curricula.py  equipment.py  lessons.py  levels.py  media.py  modules.py  programs.py  sections.py
backend/app/features/courses/schemas/: __init__.py  assessment.py  course.py  curriculum.py  equipment.py  lesson.py  level.py  media.py  module.py  program.py  progression.py  (+1 more)
backend/app/features/enrollments/: README.md  __init__.py
backend/app/features/facilities/: __init__.py
backend/app/features/locations/: __init__.py
backend/app/features/organizations/: __init__.py
backend/app/features/parents/: IMPLEMENTATION_SUMMARY.md  __init__.py
backend/app/features/profiles/: __init__.py  routes.py  routes_simple.py  schemas.py  services.py
backend/app/features/programs/: __init__.py
backend/app/features/scheduling/: __init__.py
backend/app/features/students/: __init__.py
backend/app/features/teams/: __init__.py
backend/app/middleware/: __init__.py  program_context.py  security.py
backend/scripts/: create_sample_progression_data.py  test_progression_system.py
backend/tests/: __init__.py  conftest.py  run_role_tests.py
backend/tests/integration/: test_multi_role_scenarios.py  test_program_context_api.py  test_server.py  test_student_api.py
backend/tests/unit/: test_auth.py  test_auth_simple.py  test_role_based_access.py  test_student_db.py
(+775 files in other folders)
